# wraithwall

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
cli/: __init__.py
docs/: COMMUNITY_ROADMAP.md  FIRST_CONTRIBUTOR_TASKS.md  METRICS_METHODOLOGY.md  api.md  architecture.md  deployment.md
docs/knowledge-pipeline/: PUBLICATION_ROADMAP.md  PUBLICATION_STANDARDS.md  PUBLISH_001.md  PUBLISH_002.md  manifest.json
examples/: quickstart.py
open-source/: PACKAGE_INVENTORY.md  README.md  publish.sh
scripts/: notify_telegram.py
sdk/: __init__.py
session-export/: 00-index.txt  01-oss-integration-audit.txt  02-phase-0-complete.txt  03-env-visual-storytelling.txt  04-visual-design-system.txt  05-pip-install-fix-summary.txt
src/wraithwall/: __init__.py  ai_runtime_security.py  architecture_viz.py  asn_intelligence.py  behavioral_dna.py  bgp_monitor.py  botmind_classifier.py  campaign_correlator.py  canary_service.py  chronos_temporal.py  cli.py  client.py  cowrie_intelligence.py  credential_propagation.py  database.py  deception_event_bus.py  demo_request.py  dml_engine.py  echo_intent.py  fingerprint_corpus.py  fusion_stix.py  gateway.py  incident_response.py  knowledge_docs.py  link_checker.py  live_events.py  llm_cache.py  llm_firewall.py  llm_honeypot.py  public_api.py  recalibration.py  replay_tty.py  (+9 more)
templates/: docs.html
terraform/: main.tf
tests/: test_create_app.py  test_public_api.py  test_sdk.py
(+12 files in other folders)
